--- a/database/03_SQL_기초/3.4_INSERT_UPDATE_DELETE.md
+++ b/database/03_SQL_기초/3.4_INSERT_UPDATE_DELETE.md
@@ -4,20 +4,6 @@
 
 ---
 
-## 실습 준비
-
-이 섹션에서는 **sakila 데이터베이스**를 사용합니다.
-
-```sql
-USE sakila;
-```
-
-sakila 데이터베이스 설치 방법은 [README.md](./README.md)를 참고하세요.
-
-**참고**: sakila DB는 읽기 전용으로 사용하는 것을 권장합니다. 실습을 위해 별도 테스트 테이블을 생성합니다.
-
----
-
 ## 1. 실습용 테이블 생성
 
 sakila DB의 원본 데이터를 보호하기 위해 별도 테이블을 생성합니다.
@@ -284,18 +270,42 @@ SELECT COUNT(*) FROM film WHERE length >= 120;
 
 ## 강사 가이드
 
+### 데이터베이스 활용 전략
+
+**이 섹션은 데이터 변경(DML)을 다루므로 특별한 접근법을 사용합니다:**
+
+1. **test_db (데이터 변경 실습용)**
+   - INSERT, UPDATE, DELETE 실습을 위한 별도 테스트 DB
+   - 학생들이 자유롭게 데이터를 추가/수정/삭제 가능
+   - 실수해도 안전한 환경
+
+2. **sakila DB (읽기 전용 조회)**
+   - SELECT 쿼리 연습용으로만 사용
+   - 원본 데이터 보호
+   - 실제 프로덕션 DB를 다루는 것처럼 신중하게 접근
+
+3. **수업 진행 흐름**
+   ```
+   1. test_db 생성 및 테이블 설정
+   2. INSERT/UPDATE/DELETE 실습 (test_db)
+   3. sakila DB로 조회 연습 (읽기 전용)
+   4. 안전한 DML 습관 강조
+   ```
+
 ### 핵심 포인트
 
 1. **WHERE 절 필수**: UPDATE/DELETE는 항상 WHERE와 함께
 2. **SELECT로 먼저 확인**: 영향받을 데이터를 먼저 조회
 3. **트랜잭션 활용**: 실수 방지
 4. **sakila는 읽기 전용**: 별도 테스트 DB 사용
+5. **안전 습관 형성**: 실수로 전체 데이터 삭제 방지 교육
 
 ### 실습 진행 팁
 
-1. **test_db 생성**: 실습용 별도 DB
-2. **sakila는 조회만**: 원본 데이터 보호
+1. **test_db 생성**: 실습용 별도 DB (학생마다 독립적으로 생성)
+2. **sakila는 조회만**: 원본 데이터 보호 강조
 3. **트랜잭션 실습**: COMMIT/ROLLBACK 체험
+4. **WHERE 누락 체험**: 안전한 환경에서 실수 경험 (교육 목적)
 
 ---
 
