--- a/database/03_SQL_기초/3.6_실습_프로젝트.md
+++ b/database/03_SQL_기초/3.6_실습_프로젝트.md
@@ -6,13 +6,16 @@
 
 ## 실습 준비
 
-이 섹션에서는 **sakila 데이터베이스**를 사용합니다.
+이 섹션에서는 **새로운 데이터베이스를 직접 생성**합니다.
 
 ```sql
-USE sakila;
+-- 실습용 데이터베이스 생성
+CREATE DATABASE shop_system CHARACTER SET utf8mb4 COLLATE utf8mb4_unicode_ci;
+USE shop_system;
 ```
 
-sakila DB는 DVD 대여점 시스템으로, 실전 프로젝트 연습에 적합합니다.
+**참고**: 이 프로젝트는 종합 실습으로, 데이터베이스 설계부터 쿼리 작성까지 전 과정을 경험합니다.
+이전 섹션들(3.1~3.5)과 달리, 학생들이 직접 테이블을 생성하고 데이터를 삽입하는 실전 프로젝트입니다.
 
 ---
 
@@ -573,6 +576,23 @@ ORDER BY SUM(price * stock) DESC;
 
 ## 강사 가이드
 
+### 데이터베이스 활용 전략
+
+**이 프로젝트는 종합 실습이므로 특별한 접근법을 사용합니다:**
+
+1. **자체 데이터베이스 생성 (shop_system)**
+   - 학생들이 처음부터 끝까지 직접 데이터베이스 설계 및 구축
+   - CREATE, INSERT, UPDATE, DELETE를 모두 경험
+   - 실전 프로젝트 감각 향상
+
+2. **world/sakila DB와의 차이**
+   - 3.1~3.5: world (강의) + sakila (실습) 패턴
+   - 3.6: 자체 DB로 종합 프로젝트 (설계부터 쿼리까지 전 과정 체험)
+
+3. **추가 sakila 연습 (선택 사항)**
+   - 시간이 남으면 sakila DB로도 비슷한 쿼리 연습 가능
+   - 예: film 테이블로 집계, rental 테이블로 날짜 분석 등
+
 ### 수업 진행 방법
 
 **1단계: 환경 준비 (10분)**
@@ -599,6 +619,7 @@ ORDER BY SUM(price * stock) DESC;
 2. **결과 확인 습관**: 모든 쿼리 후 결과 체크
 3. **실수 경험**: UPDATE/DELETE 시 WHERE 누락 체험 (안전 환경에서)
 4. **실전 연결**: 실제 업무 시나리오와 연결
+5. **종합 경험**: DDL + DML을 모두 직접 작성하며 전체 프로세스 이해
 
 ### 자주 하는 질문
 
